[gd_scene load_steps=11 format=3 uid="uid://cjv3ykbxr5gmn"]

[ext_resource type="Theme" uid="uid://metrw8hf6qy1" path="res://Scenes/UI/base_theme.tres" id="1_dotjr"]
[ext_resource type="Script" uid="uid://bx8luj603scuu" path="res://Scenes/UI/start_menu.gd" id="1_xry01"]
[ext_resource type="Texture2D" uid="uid://6cohqijp23h3" path="res://Assets/Images/UI/main_menu_background_old.png" id="2_3kyvb"]
[ext_resource type="PackedScene" uid="uid://co4vy8ojvpmq7" path="res://Scenes/UI/custom_button.tscn" id="3_8wf1d"]
[ext_resource type="AudioStream" uid="uid://bbrcduyohi4wn" path="res://Assets/Audio/Ambient 9.ogg" id="4_2ybwg"]
[ext_resource type="Texture2D" uid="uid://pnet4je3hnr3" path="res://Assets/Images/UI/Start Menu/bridge.png" id="4_vxxty"]
[ext_resource type="Texture2D" uid="uid://b8idub8u78lf7" path="res://Assets/Images/UI/Start Menu/tower.png" id="5_8hnkv"]
[ext_resource type="Texture2D" uid="uid://nq7k1b12lyjv" path="res://Assets/Images/UI/Start Menu/menu_frame_2.png" id="6_1gelb"]
[ext_resource type="Texture2D" uid="uid://ctri0dlepe47n" path="res://Assets/Images/UI/Start Menu/banner.png" id="6_vxxty"]
[ext_resource type="Texture2D" uid="uid://coa2n0bo7v4fc" path="res://Assets/Images/UI/Start Menu/title.png" id="7_dotjr"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dotjr")
script = ExtResource("1_xry01")
metadata/_edit_lock_ = true

[node name="BackgroundImageOld" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3kyvb")
metadata/_edit_lock_ = true

[node name="Bridge" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 82.0
offset_right = 252.0
offset_bottom = 160.0
texture = ExtResource("4_vxxty")

[node name="Tower" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -40.0
offset_right = 82.0
offset_bottom = 160.0
texture = ExtResource("5_8hnkv")

[node name="Banner" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 96.0
offset_right = 70.0
offset_bottom = 148.0
texture = ExtResource("6_vxxty")

[node name="MenuFrame" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = -18.0
offset_right = 243.0
offset_bottom = 176.0
texture = ExtResource("6_1gelb")
patch_margin_left = 21
patch_margin_top = 20
patch_margin_right = 21
patch_margin_bottom = 18
axis_stretch_vertical = 1

[node name="Title" type="TextureRect" parent="MenuFrame"]
layout_mode = 0
offset_left = 26.0
offset_top = 22.0
offset_right = 138.0
offset_bottom = 94.0
texture = ExtResource("7_dotjr")

[node name="StartButton" parent="MenuFrame" instance=ExtResource("3_8wf1d")]
offset_left = 59.0
offset_top = 102.0
offset_right = 106.0
offset_bottom = 122.0
text = "Start"
neighbor_left = NodePath(".")
neighbor_top = NodePath(".")
neighbor_right = NodePath(".")
neighbor_bottom = NodePath("../HowToPlayButton")
neighbor_next = NodePath("../HowToPlayButton")
neighbor_previous = NodePath("../QuitButton")

[node name="HowToPlayButton" parent="MenuFrame" instance=ExtResource("3_8wf1d")]
offset_left = 39.0
offset_top = 126.0
offset_right = 126.0
offset_bottom = 146.0
text = "How to play"
neighbor_left = NodePath(".")
neighbor_top = NodePath("../StartButton")
neighbor_right = NodePath(".")
neighbor_bottom = NodePath("../SettingsButton")
neighbor_next = NodePath("../../Credits Button")
neighbor_previous = NodePath("../StartButton")

[node name="SettingsButton" parent="MenuFrame" instance=ExtResource("3_8wf1d")]
offset_left = 29.0
offset_top = 150.0
offset_right = 95.0
offset_bottom = 170.0
text = "Settings"
neighbor_left = NodePath("../../Credits Button")
neighbor_top = NodePath("../HowToPlayButton")
neighbor_right = NodePath("../QuitButton")
neighbor_bottom = NodePath(".")
neighbor_next = NodePath("../QuitButton")
neighbor_previous = NodePath("../../Credits Button")

[node name="QuitButton" parent="MenuFrame" instance=ExtResource("3_8wf1d")]
offset_left = 99.0
offset_top = 150.0
offset_right = 134.0
offset_bottom = 170.0
text = "Quit"
neighbor_left = NodePath("../SettingsButton")
neighbor_top = NodePath("../HowToPlayButton")
neighbor_right = NodePath(".")
neighbor_bottom = NodePath(".")
neighbor_next = NodePath("../StartButton")
neighbor_previous = NodePath("../SettingsButton")

[node name="Credits Button" parent="." instance=ExtResource("3_8wf1d")]
offset_left = 5.0
offset_top = 135.0
offset_right = 63.0
offset_bottom = 155.0
text = "Credits"
neighbor_left = NodePath(".")
neighbor_top = NodePath(".")
neighbor_right = NodePath("../MenuFrame/SettingsButton")
neighbor_bottom = NodePath(".")
neighbor_next = NodePath("../MenuFrame/SettingsButton")
neighbor_previous = NodePath("../MenuFrame/HowToPlayButton")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2ybwg")
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(4, 4)

[connection signal="pressed" from="MenuFrame/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuFrame/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuFrame/QuitButton" to="." method="_on_quit_button_pressed"]
